# label_matching_train

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  dev.ps1  prod.ps1  pyproject.toml  rbac.ps1
deploy/: Dockerfile  docker-compose.yml  requirements.in
deploy/HttpTrigger/: __init__.py  validate.py
deploy/scripts/: translator.py
develop/: eda.py  load.py  main.py  preprocess.py  resample.py  similarity.py  translator.py
label/prodigy/remote/: Dockerfile  requirements.in
train/spacy/: .gitignore  project.yml
train/spacy/scripts/: convert.py  load.py  main.py  split.py
visualise/dash/: Dockerfile  app.py  docker-compose.yml  requirements.in
visualise/streamlit/: Dockerfile  app.py
visualise/streamlit/.streamlit/: config.toml
